# dear-incremental

./: .clang-format  .gitignore  CMakeLists.txt
docs/: notes.txt
src/: main.cpp
src/common/: Resource.hpp
src/model/: MainGameState.cpp  MainGameState.hpp  ResourceManager.cpp  ResourceManager.hpp
src/model/upgrades/: CurveRegistry.cpp  CurveRegistry.hpp  Upgrade.cpp  Upgrade.hpp  Upgrades.json
src/view/: MainGameWindow.cpp  MainGameWindow.hpp
src/viewmodel/: MainGameViewModel.hpp
